Update suggest endpoint contract
